# BiTun

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  run_integration_test.sh
docs/: FACT.md  README.en.md  README.ja.md  adversarial_report.md  audit_report.md  bitun_osal_design.md  dependence_analysis.md  design.md  esp32_porting_guide.md  final_osal_spec.md  implementation_adversarial_report.md  implementation_audit_report.md  implementation_submission.md  implementation_task_plan.md  project_fec_audit_report.md  project_fec_submission.md  project_fec_task_plan.md  project_reorganization_adversarial_report.md  project_reorganization_audit_report.md  project_reorganization_submission.md  project_reorganization_task_plan.md  project_scripts_audit_report.md  project_scripts_submission.md  project_scripts_task_plan.md  project_simplification_audit_report.md  project_simplification_submission.md  project_simplification_task_plan.md  task_plan.md  verification_report.md
src/: bitun_osal.h  encrypt.c  encrypt.h  fec.c  fec.h  ikcp.c  ikcp.h  main.c  socks5.c  socks5.h  tunnel.c  tunnel.h
src/esp32/: CMakeLists.txt  Makefile  build.sh  clean.sh  main.c
src/esp32/main/: CMakeLists.txt  app_main_dummy.c
src/linux/: Makefile  bitun_osal.c  main.c  test_bitun_osal.c  test_fec.c
